--- a/_posts/2020-5-11-day_12.md
+++ b/_posts/2020-5-11-day_12.md
@@ -28,3 +28,73 @@ tags:
 #### 返回数据时
 
 ![](\img\day_12_03.png)
+
+#### 总结
+
+1. 当交换机接收到一个帧后，首先学习帧中的源MAC地址来形成MAC地址表；
+2. 然后检查帧中的目标MAC地址，并匹配MAC地址表；
+   - 如果MAC表中有匹配项，则单播转发；
+   - 如MAC表中无匹配项，则广播转发；
+3. MAC地址表的老化时间默认是300秒（可修改）。
+
+#### 接口
+
+例如`F 0/1`：
+
+- `E`:表示10Mb。
+- `F`:表示100Mb。
+- `G`:表示1000Mb。
+- `Te`:表示10000Mb。
+- `0`:表示模块号。
+- `1`：表示接口号。
+- `1000/100/10`自适应：表示速率工作模式可以为`10`,`100`,`1000`任何一种状态。
+
+接口关闭（**down**）的三种可能：
+
+- 人为的**down**掉；
+- 速率不匹配；
+- 双工模式（单工、半双工、全双工）不匹配；
+
+## 基本工作模式
+
+1. 用户模式（`switch>`）:可以**查看**交换机的基本简单信息，但**不能修改配置**！
+2. 特权模式（`switch#`）:在用户模式下输入`enable`进入。可以进行查看所有配置、测试、保存、初始化等操作，但**不能修改配置**！
+3. 全局配置模式（`switch(config)#`）：在特权模式下输入`configure terminal`进入。**默认不能查看配置**！但是可以修改配置，且对**全部接口都生效**！
+4. 接口配置模式（`switch(config-if)#`）：在全局配置模式下输入`interface 接口`进入。**默认不能查看配置**！可以修改配置，且**只对该接口生效**！
+5. console口模式i（`Switch(config-line)#`）:在全局配置模式下输入`line console 0`进入。**默认不能查看配置**！可以修改配置，**且对console口生效**！
+
+## 基本命令
+
+**交换机的命令行输入支持命令缩写、`tab`补全、`？`等功能！**
+
+1. `ctrl+u`：快速删除光标全所有字符；
+2. `ctrl+a`：快速定位光标到行首；
+3. `ctrl+e`：快速定位光标到行尾；
+4. `exit`：退回到上一个工作模式；
+5. `end`：退回到特权模式；
+6. 在全部配置模式下（`configure terminal`）:
+   1. 输入`hostname 设备名`：修改交换机的名字；
+   2. 输入`enable password 密码`：设置特权模式登陆的明文密码；
+   3. 输入`enable secret 密码`：设置特权模式登陆的密文密码；
+7. 在console口模式下（`line console 0`）：
+   1. 输入`password 密码`、`login`、`do write`：设置或者修改用户模式下的进入密码；
+8. 在特权模式下（`enabe`）：
+   1. 输入`write`或者`copy running-config startup-config`：保存配置；
+   2. 输入`show running-config`：查看running-config配置；
+   3. 输入`show startup-config`：查看startup-config配置；
+   4. 输入`reload`：重启设备；
+   5. 输入`show mac-address-table`:查看MAC地址表；
+   6. 输入`show ip interface brief`：查看接口的使用情况；
+   7. 输入`erase startup-config`：初始化配置；
+9. 在接口模式下（`interface 接口`）:
+   1. 输入`shutdown`：关闭该接口；
+   2. 输入`no shutdown`：打开该接口；
+10. 在任何模式下，输入`do 加上特权模式下的命令`：强制使用特权模式下的命令；
+11. `no  配置命令`：取消配置；
+12. 在三层以上设备的接口模式下（`interface 接口`）；输入`ip address IP地址 子网掩码`，再输入`no shutdown`：给三层以上设备的接口设置IP；
+13. 在三层以上设备的全部配置模式下（`configure terminal`）；
+    1. 输入`line vty 0 4`、`transport input telnet`、`password 密码`、`login`:设置**telnet**远程登录管理三层设备接口；(**不安全**)
+    2. 输入`hostname 设备名`、`ip domain-name 域名`、`  crypto key generate rsa `、`line vty 0 4`、`transport input ssh`、`password 密码`、`login`:设置**ssh**远程登录管理三层设备接口；(**不安全**)
+    3. 输入`username 用户名 password 密码`、`line vty 0 4`、`transport input telnet`、`login local` :设置**telnet**远程登录管理三层设备接口；(**安全**)
+    4. 输入`username 用户名 password 密码`、`hostname 设备名`、`ip domain-name 域名`、`  crypto key generate rsa `、`line vty 0 4`、`transport input ssh`、`login local` :设置**ssh**远程登录管理三层设备接口；(**安全**)
+
