--- a/_posts/2020-5-11-day_12.md
+++ b/_posts/2020-5-11-day_12.md
@@ -70,31 +70,48 @@ tags:
 1. `ctrl+u`：快速删除光标全所有字符；
 2. `ctrl+a`：快速定位光标到行首；
 3. `ctrl+e`：快速定位光标到行尾；
-4. `exit`：退回到上一个工作模式；
-5. `end`：退回到特权模式；
-6. 在全部配置模式下（`configure terminal`）:
+4. `ctrl+c`：中断测试；
+5. `ctrl+z`：退回到特权模式；
+6. `exit`：退回到上一个工作模式；
+7. `end`：退回到特权模式；
+8. 在全部配置模式下（`configure terminal`）:
    1. 输入`hostname 设备名`：修改交换机的名字；
    2. 输入`enable password 密码`：设置特权模式登陆的明文密码；
    3. 输入`enable secret 密码`：设置特权模式登陆的密文密码；
-7. 在console口模式下（`line console 0`）：
+   4. 输入`no ip domain-lookup`：关闭自动解析功能；（命令错误不再死机）
+9. 在console口模式下（`line console 0`）：
    1. 输入`password 密码`、`login`、`do write`：设置或者修改用户模式下的进入密码；
-8. 在特权模式下（`enabe`）：
+10. 在特权模式下（`enabe`）：
    1. 输入`write`或者`copy running-config startup-config`：保存配置；
    2. 输入`show running-config`：查看running-config配置；
    3. 输入`show startup-config`：查看startup-config配置；
    4. 输入`reload`：重启设备；
    5. 输入`show mac-address-table`:查看MAC地址表；
    6. 输入`show ip interface brief`：查看接口的使用情况；
-   7. 输入`erase startup-config`：初始化配置；
-9. 在接口模式下（`interface 接口`）:
-   1. 输入`shutdown`：关闭该接口；
-   2. 输入`no shutdown`：打开该接口；
-10. 在任何模式下，输入`do 加上特权模式下的命令`：强制使用特权模式下的命令；
-11. `no  配置命令`：取消配置；
-12. 在三层以上设备的接口模式下（`interface 接口`）；输入`ip address IP地址 子网掩码`，再输入`no shutdown`：给三层以上设备的接口设置IP；
-13. 在三层以上设备的全部配置模式下（`configure terminal`）；
+   7. 输入`show version`：查看设备版本；
+   8. 输入`erase startup-config`：初始化配置；
+11. 在接口模式下（`interface 接口`）:
+    1. 输入`shutdown`：关闭该接口；
+    2. 输入`no shutdown`：打开该接口；
+    3. 输入`speed 10\100\auto`：设置接口速率匹配方式；
+    4. 输入`duplex auto\full\half`：设置接口双工模式；
+12. 在任何模式下，输入`do 加上特权模式下的命令`：强制使用特权模式下的命令；
+13. `no  配置命令`：取消配置；
+14. 在三层以上设备的接口模式下（`interface 接口`）；输入`ip address IP地址 子网掩码`，再输入`no shutdown`：给三层以上设备的接口设置IP；
+15. 在三层以上设备的全部配置模式下（`configure terminal`）；
     1. 输入`line vty 0 4`、`transport input telnet`、`password 密码`、`login`:设置**telnet**远程登录管理三层设备接口；(**不安全**)
     2. 输入`hostname 设备名`、`ip domain-name 域名`、`  crypto key generate rsa `、`line vty 0 4`、`transport input ssh`、`password 密码`、`login`:设置**ssh**远程登录管理三层设备接口；(**不安全**)
     3. 输入`username 用户名 password 密码`、`line vty 0 4`、`transport input telnet`、`login local` :设置**telnet**远程登录管理三层设备接口；(**安全**)
     4. 输入`username 用户名 password 密码`、`hostname 设备名`、`ip domain-name 域名`、`  crypto key generate rsa `、`line vty 0 4`、`transport input ssh`、`login local` :设置**ssh**远程登录管理三层设备接口；(**安全**)
+16. 在交换机上的全局配置模式下（`configure terminal`）：`ip default-getway  该网段的网关`、`interface vlan 1`、`ip address IP地址 子网掩码`、`no shudown`:远程跨网段telnet管理交换机。
 
+### 关于设备上的两个端口
+
+|                           |                         up                         |                           down                           |
+| :-----------------------: | :------------------------------------------------: | :------------------------------------------------------: |
+|          **up**           | 接口是打开的状态并且插上了网线，速率和模式匹配成功 | 接口是打开的状态并且插上了网线，但是速率或者模式匹配错误 |
+|         **down**          |                                                    |            接口是打开的状态，但是没有插上网线            |
+| **administratively down** |                                                    |                     手工把端口关闭了                     |
+
+- 二层设备的接口都是默认打开的；不需要自己手工打开。
+- 三层以上的设备接口都是默认`administratively down`；需要手工打开（`no shudown`）。
