--- a/_posts/2020-7-11-Linux基础（一）.md
+++ b/_posts/2020-7-11-Linux基础（一）.md
@@ -1,4 +1,4 @@
-[layout]():     post
+layoIut:     post
 title:     Linux基础（一）
 subtitle:  目录结构、常用命令、VIM编辑器
 date:       2020-7-11
@@ -7,7 +7,7 @@ header-img: "img/man-6.jpg"
 catalog: true
 tags: 
      - 网络安全
-          - 千锋教育
+     - 千锋教育
 
 
 
