--- a/_posts/2020-7-12-Linux基础（二）.md
+++ b/_posts/2020-7-12-Linux基础（二）.md
@@ -1,9 +1,9 @@
 ---
 
 layout:     post
-title:     Linux基础（一）
-subtitle:  用户与组管理、权限管理、
-date:       2020-7-11
+title:     Linux基础（二）
+subtitle:  用户与组管理、权限管理、任务调度
+date:       2020-7-12
 author:     One-Punch-Man
 header-img: "img/man-6.jpg"
 catalog: true
@@ -90,4 +90,97 @@ tags:
 
 
 
-- 
+- `chmod`：修改文件或者目录权限，语法：`chmod [选项] nnn 文件或者目录`，n的范围为0-7；常用选项：
+
+  - `-R`：递归修改；
+  - `-v`：显示详细信息；
+- `chown`：修改文件或者目录的所有者；语法：`chown [用户] [文件或目录]`。
+- `chgrp`：修改文件或者目录的所有组，语法：`chgrp [用户组] [文件或目录]`。
+
+
+
+
+
+## 任务调度
+
+- `service crond status`：查看`crond`的运行状态；
+
+- `service crond start`：启动服务；
+
+- `service crond stop`：停止服务；
+
+- `service crond restart`：重启服务；
+
+- `service crond reload`：重新载入配置；
+
+- `crontab -e`：设置任务，参数含义如下：
+
+  | 项目      | 含义                           | 范围                    |
+  | :-------- | :----------------------------- | :---------------------- |
+  | 第一个"*" | 一小时当中的第几分钟（minute） | 0~59                    |
+  | 第二个"*" | 一天当中的第几小时（hour）     | 0~23                    |
+  | 第三个"*" | 一个月当中的第几天（day）      | 1~31                    |
+  | 第四个"*" | 一年当中的第几个月（month）    | 1~12                    |
+  | 第五个"*" | 一周当中的星期几（week）       | 0~7（0和7都代表星期日） |
+
+  | 特殊符号    | 含义                                                         |
+  | :---------- | :----------------------------------------------------------- |
+  | *（星号）   | 代表任何时间。比如第一个"*"就代表一小时种每分钟都执行一次的意思。 |
+  | ,（逗号）   | 代表不连续的时间。比如" 0 8，12，16 * * *命令"就代表在每天的 8 点、12 点、16 点执行一次 |
+  | -（中杠）   | 代表连续的时间范围。比如"0 5 * * 1-6命令"，代表在周一到周六的凌晨 5 点 0 分执行 |
+  | /（正斜线） | 代表每隔多久执行一次。比如"*/10 * * * *命令"，代表每隔 10 分钟就执行一次 |
+
+ - `crontab -l`：查看任务；
+
+ - `crontab -r`：删除当前用户的所有任务；
+
+### 注意事项
+
+- 时间+需要执行的任务选项都不能为空，必须填写
+- 定时任务的最小有效时间是分钟，最大有效时间是月。
+- 在定时任务中，不管是直接写命令，还是在脚本中写命令，最好都使用绝对路径。有时使用相对路径的命令会报错
+- 在定义时间时，日期和星期最好不要在一条定时任务中出现，因为它们都以天为单位，非常容易混淆，不便于管理
+
+##   分区与挂载
+
+1. 在虚拟机中添加一块硬盘，重启；
+
+2. 使用`fdisk [选项] /dev/sdb`对磁盘分区，常用选项：
+
+   - `-l`：列出所有的分区类型；
+
+3. 开始分区后输入m（打印菜单），然后输出n（添加一块分区），然后输入p（添加主分区），两次输入回车（默认选项），最后输入w（写入分区）；
+
+   | 命令 | 说 明                     |
+   | :--- | :------------------------ |
+   | a    | 设置可引导标记            |
+   | b    | 编辑 sdb 磁盘标签         |
+   | c    | 设置 DOS 操作系统兼容标记 |
+   | d    | 删除一个分区              |
+   | 1    | 显示已知的文件系统类型    |
+   | m    | 显示帮助菜单              |
+   | n    | 新建分区                  |
+   | P    | 显示分区列表              |
+   | q    | 不保存退出                |
+   | s    | 新建空白 SUN 磁盘标签     |
+   | t    | 改变一个分区的系统类型    |
+   | w    | 保存退出                  |
+
+4. 使用`mkfs /dev/sdb1`格式化磁盘分区；
+
+5. 创建一个目录用来挂载磁盘，然后输入`mount /dev/sdb1 挂载点`进行挂载（临时挂载）；
+
+6. 打开`/etc/fstab`，添加`/dev/sdb1 挂载目录 xfs defaults 0 0`，输入`mount -a`立即生效。
+
+### 其他指令
+
+- `umount 设备名字/挂载目录`：取消挂载；
+- `df`：查看Linux系统中各文件系统的硬盘使用情况，语法：` df [选项] [目录或文件名]`，常用选项：
+  - `-a`：显示所有的文件系统信息；
+  - `-h`：以人可视化显示；
+- `du`：统计目录或文件所占磁盘空间大小；语法`du [选项] [目录或文件名]`常用选项：
+  - `-h`：以人可视化显示；
+  - `-s`：统计总的使用
+  - `-a`：显示每个子文件夹的磁盘占用量；
+
+
