--- a/_posts/2020-7-16-Linux基础（三）.md
+++ b/_posts/2020-7-16-Linux基础（三）.md
@@ -81,3 +81,79 @@ tags:
 6. 用虚拟机ping主机；再ping外网；最后主机ping虚拟机；如果都正常则配置成功。
 
 ## YUM和RPM
+
+### YUM
+
+对于一个查询出来的软件包名，例如：`firefox-60.8.0-1.el7.centos.x86_64`：
+
+1. `firefox`：表示软件名字；
+
+2. `60.8.0`：表示软件版本；
+
+3. `1`：表示发布的次数；
+
+4. `e17.centos`：表示所适合的操作系统；
+
+5. `x86_64`：表示适合的硬件平台；（`noarch`表示通用）
+
+   
+
+常用的rpm指令如下：
+
+
+
+- `rpm -qa`:查看系统中所以安装的软件包，结合`grep`指令可以查看系统是否安装某个软件包；
+- `rpm -qi 软件包名`：查看该软件包的详细信息，具体信息如下：
+  - `Name`:包名
+  - `Version`:版本号
+  - `Release`:发行版本
+  - `Install Date`:安装时间
+  - `Group`、`Source RPM`:组和源RPM包文件名
+  - `Signature`:数字签名
+  - `Summary`:软件包说明
+  - `Description`:软件详细描述
+  - `Packager`、`URL`:厂商以及地址
+- `rpm -ql 软件包名`：查看该软件包中所有文件的安装路径；
+- `rpm -qf 文件（文件）名`：查看该文件（夹）是有哪一个软件包生成的；（自己创建的文件（夹）是无效的）；
+- `rpm -qR 软件包`：查看该软件包的依赖关系；
+- `rpm -ivh 全包名.rpm`：安装软件包，
+  - `-i`：安装；
+  - `-v`：显示详细信息；
+  - `-h`：显示安装进度；
+- `rpm -e 软件名`：卸载软件；
+- `rpm -Uvh 包全名`：如果该软件没安装过则直接安装到最新版；
+- `rpm -Fvh 包全名`：该软件必须安装过才能升级；
+
+
+
+### YUM
+
+`yum` 是一个专门为了解决包的依赖关系而存在的软件包管理器。就好像 Windows 系统上我们通常可以通过各种软件管家实现软件的一键安装、升级和卸载，`yum`就是Linux 系统中的`一键安装工具`。
+
+使用 `yum` 安装软件时至少需要一个yum源。yum源既可以使用网络yum源，也可以将本地光盘作为yum源。**打开`/etc/yum.repos.d/CentOS-Base.repo`，每一行的意思如下：**
+
+- `[BaseOS]`：容器名称
+- `name`：容器说明
+- `mirrorlist`：镜像站点
+- `baseurl`：yum 源服务器的地址。默认是 CentOS 官方的 yum 源服务器，是可以使用的。如果你觉得慢，则可以改成你喜欢的 yum 源地址
+- `enabled`：此容器是否生效，如果不写或写成 enabled 则表示此容器生效，写成 enable=0 则表示此容器不生效
+- `gpgcheck`：如果为 1 则表示 RPM 的数字证书生效；如果为 0 则表示 RPM 的数字证书不生效
+- `gpgkey`：数字证书的公钥文件保存位置。
+
+**下面配置使用阿里云的yum源作为网络下载源**：
+
+1. 先压缩备份原来的`CentOS-Base.repo`；
+2. 然后删除原`CentOS-Base.repo`文件；
+3. 使用`wget -O /etc/yum.repos.d/CentOS-Base.repo http://mirrors.aliyun.com/repo/Centos-7.repo`下载阿里云yum源；
+4. 使用`yum clean all `清除原缓存；
+
+**常用的yum指令**：
+
+- `yum -y install 包名`：yum安装软件包，
+  - `-y`：无提示安装；
+  - `install`：安装；
+- `yum -y updata 软件包`：升级软件包；
+- `yum remove 软件包`：卸载软件包；同时卸载所有与该包有依赖关系的其他软件包。
+- `yum list`：查询所有已安装和可安装的软件包；
+- `yum search [关键字]`：查询相关的软件包；
+- `yum info [软件包]`：查询软件包的信息。
