--- a/_posts/2020-9-12-信息收集.md
+++ b/_posts/2020-9-12-信息收集.md
@@ -1,17 +1,16 @@
 ---
 
 layout:     post
-title:     信息收集
-subtitle:  whois、子域名、IP、端口
+title:     信息收集V1.0
+subtitle:  网站和工具
 date:       2020-9-12
 author:     One-Punch-Man
 header-img: "img/man-6.jpg"
 catalog: true
 tags: 
      - 网络安全
-	 - 信息收集
+     - 信息收集
 ---
-
 
 
 
